# slack-cr-reminder

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yaml
