[tool.poetry]
name = "cr-bot"
version = "0.1.0"
description = "Slacl bot for daily CR event"
authors = ["Rui Lu <rui.lu.ext@tomoloyalty.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.16.2"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-dependency = "^0.5.1"
pydevd-pycharm = "~=222.4345.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

